--- a/views/pages/problem.ejs
+++ b/views/pages/problem.ejs
@@ -194,7 +194,7 @@
 				/*
 				<%- problem.flowchart %>
 				*/
-
+				mermaid.initialize({startOnLoad:true});
 				/* Debugging purposes */
 				$(document).keydown(function(event) {
 					if (event.which == 113) {
