Added some measures for server time sync.

--- a/views/pages/problem.ejs
+++ b/views/pages/problem.ejs
@@ -178,6 +178,7 @@
 			data_sessionId = '<%- session_id %>';
 			data_problemId = '<%- problem.problem_id %>';
 			data_exerciseMode = '<%- exercise_mode %>';
+			data_serverTimestamp = '<%- server_timestamp %>';
 
 			message_submit_correct = '<%- languagePack.submission_correct %>';
 			message_submit_wrong = '<%- languagePack.submission_wrong %>';
