Added missing open curly brace on the function headers.

--- a/views/pages/problem.ejs
+++ b/views/pages/problem.ejs
@@ -74,7 +74,7 @@
 				<!-- Coding panel -->
         <div id='div-coding-panel' class='cell small-12 medium-4'>
 					<!-- Editor panel -->
-					<pre class='fixed-code'><%- problem.return_type %> <%- problem.method_name %>(<% for (var i = 0; i < problem.argument_types.length; i++) { %><%- problem.argument_types[i] + ' ' + problem.argument_names[i] %><% if (i != problem.argument_types.length - 1) { %>,<%}%><%}%>)</pre>
+					<pre class='fixed-code'><%- problem.return_type %> <%- problem.method_name %>(<% for (var i = 0; i < problem.argument_types.length; i++) { %><%- problem.argument_types[i] + ' ' + problem.argument_names[i] %><% if (i != problem.argument_types.length - 1) { %>,<%}%><%}%>) {</pre>
           <div id='editor'>
 
           </div>
