Restructured storage of data to accomodate snaps.

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -684,6 +684,11 @@
   width: 32px;
   margin: 0 auto; }
 
+#camera {
+  width: 320px;
+  height: 240px;
+}
+
 /* End of problem page */
 /*! normalize-scss | MIT/GPLv2 License | bit.ly/normalize-scss */
 /* Document
