--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -119,6 +119,7 @@
     <script src="/js/foundation.reveal.js"></script>
     <script src="/js/stretchy.js"></script>
     <script src="/js/system.js"></script>
+    <script src="/js/webcam.min.js"></script>
     <script src="/js/what-input.js"></script>
     <!--SCRIPTS END-->
   </body>
