--- a/views/pages/problem.ejs
+++ b/views/pages/problem.ejs
@@ -72,7 +72,11 @@
         <!-- End of problem description -->
 
 				<!-- Coding panel -->
+				<% if (group == 'adaptive') { %>
         <div id='div-coding-panel' class='cell small-12 medium-4'>
+				<% } else { %>
+        <div id='div-coding-panel' class='cell small-12 medium-9'>
+				<% } %>
 					<!-- Editor panel -->
 					<pre class='fixed-code'><%- problem.return_type %> <%- problem.method_name %>(<% for (var i = 0; i < problem.argument_types.length; i++) { %><%- problem.argument_types[i] + ' ' + problem.argument_names[i] %><% if (i != problem.argument_types.length - 1) { %>,<%}%><%}%>) {</pre>
           <div id='editor'>
@@ -108,6 +112,7 @@
         </div>
         <!-- End of coding panel -->
 
+				<% if (group == 'adaptive') { %>
 				<!-- Adaptive panel -->
 				<div id='div-adaptive-panel' class='cell small-12 medium-5'>
 					<!-- Guide panel -->
@@ -131,6 +136,7 @@
 					<!-- End of visualization panel -->
 				</div>
 				<!-- End of adaptive panel -->
+				<% } %>
       </div>
     </div>
 		<!-- End of main container -->
@@ -194,6 +200,7 @@
 			data_userId = '<%- user_id %>';
 			data_sessionId = '<%- session_id %>';
 			data_problemId = '<%- problem.problem_id %>';
+			data_group = '<%- group %>'
 			data_exerciseMode = '<%- exercise_mode %>';
 			data_serverTimestamp = '<%- server_timestamp %>';
 
@@ -217,6 +224,7 @@
 					setInterval(function() {
 						var snap = Webcam.snap(function(data) {
 								//uploadSnap(data);
+								offerGuide();
 						});
 					}, 1000)
 				});
