Added indicator for Affectiva success / failure

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -14,6 +14,17 @@
     left: auto;
     margin: 0 auto; } }
 
+.dot {
+  position: relative;
+  top: 2px;
+  height: 16px;
+  width: 16px;
+  margin-right: 16px;
+  background-color: #bbbbbb;
+  border-radius: 50%;
+  display: inline-block;
+}
+
 /* Region Page */
 #div-region-panel {
   margin-top: 64px; }
