--- a/views/pages/problem.ejs
+++ b/views/pages/problem.ejs
@@ -219,7 +219,8 @@
 				initializeSystem();
 
 				mermaid.initialize({startOnLoad:true});
-				Webcam.attach('camera');
+
+				/*Webcam.attach('camera');
 
 				Webcam.on('load', function() {
 					setInterval(function() {
@@ -228,7 +229,7 @@
 								offerGuide();
 						});
 					}, 1000)
-				});
+				});*/
 
 				initAffdex();
 				/* Debugging purposes */
