--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -14,6 +14,53 @@
     left: auto;
     margin: 0 auto; } }
 
+/* Agreement Page */
+#div-agreement-panel {
+  margin-top: 64px; }
+
+#agreement-header {
+  font-family: 'Raleway', 'Rounded Mplus 1c', Sans-serif;
+  font-weight: bold;
+  text-align: center;
+  padding: 0px; }
+
+#div-agreement-text {
+  margin-top: 32px;
+  text-align: justify;
+}
+
+#div-agreement-control-panel {
+  margin-top: 16px;
+}
+
+#agree-button h4 {
+  color: #fff;
+  font-size: 16pt;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  text-align: center;
+  border: 1px solid #05464f;
+  border-radius: 3px;
+  background-image: linear-gradient(bottom, #332cba 0%, #362fc6 100%);
+  background-image: -o-linear-gradient(bottom, #332cba 0%, #362fc6 100%);
+  background-image: -moz-linear-gradient(bottom, #332cba 0%, #362fc6 100%);
+  background-image: -webkit-linear-gradient(bottom, #332cba 0%, #362fc6 100%);
+  background-image: -ms-linear-gradient(bottom, #332cba 0%, #362fc6 100%);
+  -webkit-box-shadow: 0px 0px 5px rgba(0,0,0,.4);
+  -moz-box-shadow: 0px 0px 5px rgba(0,0,0,.4);
+  box-shadow: 0px 0px 5px rgba(0,0,0,.4);
+}
+
+#agree-button h4:hover {
+  background-image: linear-gradient(bottom, #433be2 0%, #4b42f4 100%);
+  background-image: -o-linear-gradient(bottom, #433be2 0%, #4b42f4 100%);
+  background-image: -moz-linear-gradient(bottom, #433be2 0%, #4b42f4 100%);
+  background-image: -webkit-linear-gradient(bottom, #433be2 0%, #4b42f4 100%);
+  background-image: -ms-linear-gradient(bottom, #433be2 0%, #4b42f4 100%);
+}
+
+/* End of Agreement Page */
+
 /* Region Page */
 #div-region-panel {
   margin-top: 64px; }
