--- a/views/pages/problem.ejs
+++ b/views/pages/problem.ejs
@@ -65,7 +65,7 @@
             <p class='subheading'><%- languagePack.sample_output; %></p>
             <ul>
 							<% for (var i = 0; i < 3; i++) { %>
-              	<li><span class='code-text'><%- problem.method_name %>(<%- problem.test_case_inputs[i] %>)</span> <%- languagePack.returns; %> <span class='code-text'><%- problem.test_case_outputs[i] %></span></li>
+              	<li><span class='code-text'><%- problem.test_case_inputs[i] %></span> <%- languagePack.returns; %> <span class='code-text'><%- problem.test_case_outputs[i] %></span></li>
 							<% } %>
             </ul>
           </div>
