--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -29,11 +29,7 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/styles/app.css">
-    <link rel="stylesheet" href="/styles/base16-light.css">
-    <link rel="stylesheet" href="/styles/codemirror.css">
-    <link rel="stylesheet" href="/styles/foundation.min.css">
-    <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/min/production.min.css">
     <!--STYLES END-->
   </head>
 
@@ -108,19 +104,7 @@
     -->
 
     <!--SCRIPTS-->
-    <script src="/dependencies/sails.io.js"></script>
-    <script src="/js/app.js"></script>
-    <script src="/js/blockly_compressed.js"></script>
-    <script src="/js/blocks_compressed.js"></script>
-    <script src="/js/clike.js"></script>
-    <script src="/js/codemirror.js"></script>
-    <script src="/js/en.js"></script>
-    <script src="/js/foundation.min.js"></script>
-    <script src="/js/foundation.reveal.js"></script>
-    <script src="/js/stretchy.js"></script>
-    <script src="/js/system.js"></script>
-    <script src="/js/webcam.min.js"></script>
-    <script src="/js/what-input.js"></script>
+    <script src="/min/production.min.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
