--- a/views/pages/agreement.ejs
+++ b/views/pages/agreement.ejs
@@ -21,6 +21,8 @@
 							<li><%- languagePack.terms_4 %></li>
 							<li><%- languagePack.terms_5 %></li>
 						</ul>
+						<p class='special'><%- languagePack.terms_6 %></p>
+
 					</div>
 				</div>
 				<div id='div-agreement-control-panel' class='cell small-12 medium-6 medium-offset-3'>
