--- a/views/pages/region.ejs
+++ b/views/pages/region.ejs
@@ -8,7 +8,7 @@
 		<div class='grid-container'>
 			<div class='grid-x'>
 				<div id='div-region-panel' class='cell small-12 medium-6 medium-offset-3'>
-					<h4 class='region-header' class='text-center'>プログラム演習へようこそ！</h4>
+					<h4 class='region-header' class='text-center'>プログラミング演習へようこそ！</h4>
           <h4 class='region-header' class='text-center'>CODING PRACTICE WELCOME!</h4>
 				</div>
         <div id='div-region-select' class='cell small-12 medium-6 medium-offset-3'>
