--- a/views/pages/problem.ejs
+++ b/views/pages/problem.ejs
@@ -32,6 +32,8 @@
 
 					<% if (exercise_mode == 'syntax') { %>
 						<p id='solved-counter'><span class="dot"></span><%- languagePack.solved_filter %>: <span id='solved-count'><%- syntax_solved %></span></p>
+					<% } else { %>
+						<p id='solved-counter'><span class="dot"></span></p>
 					<% } %>
 				</div>
 				<div class='cell small-12 medium-5' id='div-problem-controls'>
@@ -233,11 +235,13 @@
 
 				initAffdex();
 				/* Debugging purposes */
-				$(document).keydown(function(event) {
-					if (event.which == 113) {
-						offerGuide();
-					}
-				});
+				<% if (user_id == 1) { %>
+					$(document).keydown(function(event) {
+						if (event.which == 113) {
+							offerGuide();
+						}
+					});
+				<% } %>
 			});
 		</script>
 		<!-- End of application scripts-->
