Added Stretchy fix for IE and Edge.

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -117,6 +117,7 @@
     <script src="/js/en.js"></script>
     <script src="/js/foundation.min.js"></script>
     <script src="/js/foundation.reveal.js"></script>
+    <script src="/js/scrollWidth.min.js"></script>
     <script src="/js/stretchy.js"></script>
     <script src="/js/system.js"></script>
     <script src="/js/webcam.min.js"></script>
