--- a/views/pages/region.ejs
+++ b/views/pages/region.ejs
@@ -28,7 +28,8 @@
 		<!-- End of main container -->
 
 		<!-- JQuery script -->
-		<script src='https://code.jquery.com/jquery-3.3.1.min.js' integrity='sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=' crossorigin='anonymous'></script>
+		<script src='https://code.jquery.com/jquery-3.3.1.min.js' integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
 		<!-- End of JQuery script -->
 
 		<!-- Foundation scripts -->
