--- a/views/pages/partials/topbar.ejs
+++ b/views/pages/partials/topbar.ejs
@@ -4,6 +4,7 @@
     <ul class="menu">
       <li><a class='menu-link' href="<%- sails.config.custom.baseUrl %>mode"><%- languagePack.home_topbar %></a></li>
       <li><a class='menu-link' href="<%- sails.config.custom.baseUrl %>instructions"><%- languagePack.syntax_practice_topbar %></a></li>
+      <li><a class='menu-link' href="<%- sails.config.custom.baseUrl %>select"><%- languagePack.review_practice_topbar %></a></li>
       <li><a class='menu-link' href="<%- sails.config.custom.baseUrl %>select"><%- languagePack.logic_practice_topbar %></a></li>
     </ul>
   </div>
