--- a/views/pages/mode.ejs
+++ b/views/pages/mode.ejs
@@ -21,13 +21,13 @@
 						<p><%- languagePack.syntax_practice_description %></p>
 					</div>
 					<div id='div-review-panel' class='mode-panel'>
-						<a href='<% sails.config.custom.baseUrl %>select' id='review-practice-button' class='mode-button'>
+						<a href='<% sails.config.custom.baseUrl %>select?m=r' id='review-practice-button' class='mode-button'>
 							<h4><%- languagePack.review_practice %></h4>
 						</a>
 						<p><%- languagePack.review_practice_description %></p>
 					</div>
 					<div id='div-logic-panel' class='mode-panel'>
-						<a href='<% sails.config.custom.baseUrl %>select' id='logic-practice-button' class='mode-button'>
+						<a href='<% sails.config.custom.baseUrl %>select?m=l' id='logic-practice-button' class='mode-button'>
 							<h4><%- languagePack.logic_practice %></h4>
 						</a>
 						<p><%- languagePack.logic_practice_description %></p>
