--- a/views/pages/partials/topbar.ejs
+++ b/views/pages/partials/topbar.ejs
@@ -4,8 +4,8 @@
     <ul class="menu">
       <li><a class='menu-link' href="<%- sails.config.custom.baseUrl %>mode"><%- languagePack.home_topbar %></a></li>
       <li><a class='menu-link' href="<%- sails.config.custom.baseUrl %>instructions"><%- languagePack.syntax_practice_topbar %></a></li>
-      <li><a class='menu-link' href="<%- sails.config.custom.baseUrl %>select"><%- languagePack.review_practice_topbar %></a></li>
-      <li><a class='menu-link' href="<%- sails.config.custom.baseUrl %>select"><%- languagePack.logic_practice_topbar %></a></li>
+      <li><a class='menu-link' href="<%- sails.config.custom.baseUrl %>select?m=r"><%- languagePack.review_practice_topbar %></a></li>
+      <li><a class='menu-link' href="<%- sails.config.custom.baseUrl %>select?m=l"><%- languagePack.logic_practice_topbar %></a></li>
     </ul>
   </div>
   <div class="top-bar-right">
