--- a/views/pages/problem.ejs
+++ b/views/pages/problem.ejs
@@ -38,11 +38,11 @@
 				</div>
 				<div class='cell small-12 medium-5' id='div-problem-controls'>
 					<% if (exercise_mode == 'syntax') { %>
-						<a href='<%- sails.config.custom.baseUrl %>generate' class='top-button green' id='top-button-2' href='#'><%- languagePack.next_problem %></a>
-						<a href='<%- sails.config.custom.baseUrl %>mode' class='top-button' id='top-button-1' href='#'><%- languagePack.back_to_mode_select %></a>
+						<a href='<%- sails.config.custom.baseUrl %>generate' class='top-button green' id='top-button-2'><%- languagePack.next_problem %></a>
+						<a href='<%- sails.config.custom.baseUrl %>mode' class='top-button' id='top-button-1'><%- languagePack.back_to_mode_select %></a>
 					<% } %>
 					<% if (exercise_mode == 'logic') { %>
-						<a href='<%- sails.config.custom.baseUrl %>select' class='top-button' id='top-button-1' href='#'><%- languagePack.back_to_problem_list %></a>
+						<a href='<%- sails.config.custom.baseUrl %>select?m=<%- mode_code %>' class='top-button' id='top-button-1'><%- languagePack.back_to_problem_list %></a>
 					<% } %>
 				</div>
 			</div>
@@ -153,7 +153,7 @@
 					<p><a class='nav-button' href='<%- sails.config.custom.baseUrl %>generate'><%- languagePack.next_problem; %></a></p>
 				<% } %>
 				<% if (exercise_mode == 'logic') { %>
-					<p><a class='nav-button' href='<%- sails.config.custom.baseUrl %>select'><%- languagePack.back_to_problem_list; %></a></p>
+					<p><a class='nav-button' href='<%- sails.config.custom.baseUrl %>select?m=<%- mode_code %>'><%- languagePack.back_to_problem_list; %></a></p>
 				<% } %>
 			</div>
 			<button class="close-button" data-close aria-label="Close modal" type="button">
