Renamed CSS file name.

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -29,7 +29,7 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/styles/app.css">
+    <link rel="stylesheet" href="/styles/app2.css">
     <link rel="stylesheet" href="/styles/base16-light.css">
     <link rel="stylesheet" href="/styles/codemirror.css">
     <link rel="stylesheet" href="/styles/foundation.min.css">
