--- a/views/pages/partials/head.ejs
+++ b/views/pages/partials/head.ejs
@@ -1,6 +1,6 @@
 <!-- Page CSS -->
 <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
-<link rel='stylesheet' href='<%- sails.config.custom.baseUrl %>styles/app.css' />
+<link rel='stylesheet' href='<%- sails.config.custom.baseUrl %>styles/app2.css' />
 <link rel="icon" href="<%- sails.config.custom.baseUrl %>images/favicon.png" type="image/x-icon"/>
 <!-- End of Page CSS -->
 <title>FUN Programming Practice!</title>
